Adds IPCs and FBPs
FBPs and IPCs are added to Nebula. Also all of the prosthetic sprites are now usable in game.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ lib/*.so
 # python
 *.pyc
 __pycache__
+config/example/admin_ranks.txt
+config/example/admin_ranks.txt
+config/example/admins.txt
+config/example/config.txt
